--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_GOOGLE_CLIENT_ID=290633335154-t5cjfc9nehmrnefebchq5eq0aub1vt6e.apps.googleusercontent.com
+
+VITE_API_BASE_URL=https://rentorabackend.onrender.com
